--- a/main.less
+++ b/main.less
@@ -24,13 +24,20 @@ html {
 nav, main, footer {
 	margin: auto 2em;
 }
-h1, h2, h3, h4, h5, p {
+h1, h2, h3, h4, h5, p, img {
 	max-width: 40rem;
 }
 p {
 	font-size: 1rem;
 }
 
+.post-meta {  /* Meta information on blog posts like tags */
+
+	}
+
+.lede {
+
+}
 /*----------------------------
 	# Miscellaneous debris
 ----------------------------*/
