--- a/main.css
+++ b/main.css
@@ -5,7 +5,47 @@
   --spacing-unit: 8px;
   --s: 8px;
 }
+/*----------------------------
+	# Fonts
+----------------------------*/
+@font-face {
+  font-family: 'libre_franklin';
+  src: url('assets/fonts/librefranklin-regular.woff2') format('woff2'), url('assets/fonts/librefranklin-regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'libre_franklin';
+  src: url('assets/fonts/librefranklin-bold.woff2') format('woff2'), url('assets/fonts/librefranklin-bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'libre_franklin';
+  src: url('assets/fonts/librefranklin-bolditalic.woff2') format('woff2'), url('assets/fonts/librefranklin-bolditalic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'libre_franklin';
+  src: url('assets/fonts/librefranklin-italic.woff2') format('woff2'), url('assets/fonts/librefranklin-italic.woff') format('woff');
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: 'prospectus';
+  src: url('assets/fonts/prospectusstd-bold.woff2') format('woff2'), url('assets/fonts/prospectusstd-bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'prospectus';
+  src: url('assets/fonts/prospectusstd-bold-italic.woff2') format('woff2'), url('assets/fonts/prospectusstd-bold-italic.woff') format('woff');
+  font-weight: bold;
+  font-style: italic;
+}
 html {
+  font-family: 'libre_franklin';
   font-size: 16px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -22,13 +62,16 @@ main,
 footer {
   margin: auto 2em;
 }
+p,
+img {
+  max-width: 40rem;
+}
 h1,
 h2,
 h3,
 h4,
-h5,
-p,
-img {
+h5 {
+  font-family: 'prospectus';
   max-width: 40rem;
 }
 p {
