Corrects an overreaching link style on the portfolio page

--- a/main.less
+++ b/main.less
@@ -405,18 +405,18 @@ article {
 	}
 }
 .portfolio {
-	& div {
+	& .projects div {
 		margin-top: var(--l);
 		margin-bottom: var(--l);
-	}
-	& a {
-		text-decoration: none;
-		& img {
-			width: 100%;
-			height: auto;
-		}
-		& p {
-			margin-bottom: 0;
+		& a {
+			text-decoration: none;
+			& img {
+				width: 100%;
+				height: auto;
+			}
+			& p {
+				margin-bottom: 0;
+			}
 		}
 	}
 }
