--- a/main.less
+++ b/main.less
@@ -153,7 +153,7 @@ h4, .h4 {
 	font-size: 1.2rem;
 	margin-top: 2rem;
 }
-p {
+p, figcaption {
 	font-size: 1rem;
 	line-height: 1.8;
 	color: var(--text-color);
@@ -168,7 +168,7 @@ p {
 		}
 	}
 }
-em {
+em, figcaption {
 	font-style: italic;
 }
 strong {
@@ -305,106 +305,122 @@ main.about { /* homepage layout */
 
 article {
 	margin: auto;
-	&.post,
-	&.post-wide,
-	&.post-portrait {
-		margin-top: var(--l);
-		padding-bottom: var(--xl);
-		margin-bottom: var(--xl);
-		border-bottom: 1px solid var(--light-gray-color);
-		& .cover-img img,
-		& .cover-img,
-		& figure img {
-			width: 100%;
-			height: auto;
-			max-width: 1280px;
-			background-color: var(--light-gray-color);
-			line-height: 0;
-		}
-		& .cover-img {
-			grid-area: cover;
-			display: flex;
-			& img {
-				height: 100%;
-				width: auto;
-				object-fit: contain;
-				margin: 0 auto;
-			}
-		}
-		& .post-body {
-			grid-area: body;
-		}
-		& a.cover-img:hover {
-				box-shadow: 0px 4px 0px var(--brand-color);
-		}
-	}
 	&:last-child {
 		border-bottom: none;
 	}
-	&.post { /* Full size journal post with a big cover image, title, meta, and body content */
-		display: grid;
-		grid-template-columns: minmax(300px, 1fr) minmax(476px, 1fr);
-		grid-template-rows: auto;
-		grid-column-gap: var(--m);
-		grid-template-areas:
-		"cover 	cover"
-		"header body"
-		".  		body";
-		@media(max-width: 840px) {
-			display: block;
-		}
-		& .cover-img {
-			grid-area: cover;
-			margin-bottom: var(--m);
-			max-height: 520px;
-		}
-		& header {
-			grid-area: header;
-			position: sticky;
-			top: 1em;
-			margin-top: 2em;
-			margin-left: 32px;
-			@media(max-width: 840px) {
-			 position: initial;
-			 margin-left: 0;
-		 }
-			& :first-child {
-				margin-top: 1.2rem;
-			}
-		}
-		& .post-body {
-			margin-top: 2em;
-			margin-right: 32px;
-			@media(max-width: 840px) {
-				margin-right: 0;
-			}
-		}
-	}
-	&.post-wide { /* Posts with a wide main image, like movie screenshot posts */
+}
+.post {
+	display: grid;
+	grid-template-columns: minmax(300px, 1fr) minmax(476px, 1fr);
+	grid-template-rows: auto;
+	grid-gap: var(--l);
+	margin-top: var(--l);
+	margin-bottom: var(--xl);
+	padding-bottom: var(--xl);
+	border-bottom: 1px solid var(--light-gray-color);
+	@media(max-width: 840px) {
 		display: block;
-		}
-		& .post-body {
-			margin: auto 32px;
-			@media(max-width: 840px) {
-				margin: auto 0;
-			}
 	}
-	&.post-portrait { /* Posts with a portrait orientation main image such as photo posts */
+	& figure,
+	& figure img {
+		max-width: 1280px;
+	}
+	& .cover {
+		grid-column: ~'1 / 3';
+		grid-row: ~'1 / 2';
+		width: 100%;
+		max-width: 1280px;
+		height: auto;
+		max-height: 520px;
+		margin-bottom: var(--m);
+		display: flex;
+		object-fit: cover;
+		background-color: var(--light-gray-color);
+		& img {
+			height: 100%;
+			width: auto;
+			object-fit: contain;
+			margin: 0 auto;
+		}
+	}
+	& a.cover:hover {
+		box-shadow: 0px 4px 0px var(--brand-color);
+	}
+	& header {
+		grid-column: ~'1 / 2';
+		display: block;
+		margin-left: var(--l);
+		@media(max-width: 840px) {
+			position: initial;
+			margin-top: var(--l);
+			margin-left: 0;
+		}
+		& :first-child {
+			margin-top: 1.2rem;
+		}
+	}
+	& .col-1 {
+		grid-column: ~'1 / 2';
+		margin-left: var(--l);
+		@media(max-width: 840px) {
+			margin-left: 0;
+		}
+	}
+	& .col-2 {
+		grid-column: ~'2 /3';
+		margin-right: var(--l);
+		@media(max-width: 840px) {
+			margin-right: 0;
+		}
+		& figure {
+			width: auto;
+			& img {
+				width: 100%;
+				height: auto;
+			}
+		}
+	}
+	& .wide { /* Places the element across both columns */
+		grid-column: ~'1 / 3';
+		& img {
+			width: 100%;
+			height: auto;
+		}
+	}
+	& img.wide {
+		width: 100%;
+		height: auto;
+	}
+	& h1:first-of-type {
+		margin-top: var(--m);
+	}
+	&.wide {
+		grid-gap: 0;
+	}
+	&.portrait { /* Posts with a portrait orientation main image such as photo posts */
 		display: grid;
-		grid-template-columns: minmax(320px, 720px) 32px minmax(320px, 1fr);
+		grid-template-columns: minmax(320px, 720px) minmax(320px, 1fr);
 		grid-template-areas:
-		"cover . caption";
+		"cover caption";
 		align-items: end;
 		@media(max-width: 840px) {
-			grid-template-columns: minmax(320px, 720px) 24px minmax(240px, 1fr);
+			grid-template-columns: minmax(320px, 720px) minmax(240px, 1fr);
 			grid-template-areas:
-			"cover . caption";
+			"cover caption";
 		}
 		@media(max-width: 640px) {
 			display: block;
 		}
-		& .cover-img {
+		& .cover {
+			grid-area: cover;
 			align-self: end;
+			object-fit: contain;
+			max-height: none;
+			margin-bottom: 0;
+			& img {
+				width: 100%;
+				height: auto;
+			}
 		}
 		& .post-body {
 			margin: 0;
@@ -413,7 +429,6 @@ article {
 		}
 	}
 }
-
 .portfolio {
 	& .projects div {
 		margin-top: var(--l);
@@ -432,7 +447,10 @@ article {
 			}
 		}
 	}
+
 }
+
+
 .two-col {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(420px, 1fr));
@@ -557,13 +575,18 @@ pre {
 }
 .paginator {
 	color: var(--text-color);
+	line-height: 1;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
 		@media(max-width: 840px) {
 			display: flex;
 			justify-content:center;
 			align-items: center;
 		}
 	& a {
-		padding: 1em;
+		flex-grow: 0 1 auto;
+		padding: var(--m);
 		text-decoration-thickness: 1px;
 		&:hover {
 			text-decoration-thickness: 3px;
@@ -571,7 +594,6 @@ pre {
 		}
 	}
 	& span {
-		margin: 0 var(--m);
 		opacity: 0.4;
 	}
 }
